Bug 352936 - Download manager window not focused properly when already open and using Do this automatically, patch by Adam Guthrie, r+sr=roc